<resources>
    <string name="app_name">Arkanoid</string>

    <string name="splash_screen_tabButtonMessage">Tap to start</string>
    <string name="login_login">Login</string>
    <string name="login_registrati">Sign in</string>
    <string name="login_login_guest">Login as Guest</string>

    <string name="login_messaggio_errore_campi_vuoti">Fields can\'t be empty</string>
    <string name="login_messaggio_errore_account_non_trovato">Login error</string>

    <string name="logout_messaggio_conferma">"Disconnected"</string>

    <string name="singin_fragment_ripeti_password">Repeat password:</string>
    <string name="singin_fragment_registrazione">Sign-in</string>
    <string name="singin_fragment_errore_registrazione">Sign-in error</string>

    <string name="main_menu_logout">Logout message</string>
    <string name="main_menu_logout_descrizione">Are you sure?</string>
    <string name="main_menu_activity_gioca">Play</string>
    <string name="main_menu_activity_multigiocatore">Multiplayer</string>
    <string name="main_menu_activity_crediti">Credits</string>
    <string name="main_menu_activity_impostazioni">Settings</string>
    <string name="main_menu_activity_creazioni">Creations</string>
    <string name="main_menu_activity_classifica">Leaderboard</string>

    <string name="fragment_selezione_modalita_modalita_classica">Classic mode</string>
    <string name="fragment_selezione_modalita_modalita_time_attack">Time attack mode</string>
    <string name="fragment_selezione_modalita_modalita_space_paddle">Space paddle</string>

    <string name="modalita_activity_seleziona_difficolta">Difficulty</string>
    <string name="modalita_activity_seleziona_difficolta_semplice">Easy</string>
    <string name="modalita_activity_seleziona_difficolta_normale">Normal</string>
    <string name="modalita_activity_seleziona_difficolta_difficile">Extreme</string>
    <string name="modalita_activity_seleziona_controllo">Control mode</string>
    <string name="modalita_activity_seleziona_controllo_touch">Touch</string>
    <string name="modalita_activity_seleziona_controllo_gyro">Gyro</string>

    <string name="pausa_fragment_riprendi">Resume</string>
    <string name="pausa_fragment_esci">Quit</string>

    <plurals name="fragment_game_over_punteggio">
        <item quantity="one">point</item>
        <item quantity="other">points</item>
    </plurals>
    <string name="fragment_game_over_nuova_partita">Play again</string>
    <string name="fragment_game_over_pubblica_risultato">Publish results</string>
    <string name="fragment_game_over_torna_menu">Main menu</string>
    <string name="fragment_game_over_pubblicato">Result published</string>
    <string name="fragment_game_over_non_pubblicato">Something went wrong</string>
    <string name="fragment_game_over_condividi">Share message</string>
    <string name="fragment_game_over_condividi_descrizione">Share result</string>


    <string name="editor_activity_modifica_info">Info</string>
    <string name="editor_activity_modifica_mappa">Map</string>
    <string name="editor_activity_modifica_parametri">Params</string>
    <string name="editor_activity_prova_livello">Test</string>
    <string name="editor_activity_salva_livello">Save level</string>
    <string name="editor_activity_reset_layer">Reset layer</string>
    <string name="editor_activity_conferma_salvataggio">Level saved</string>
    <string name="editor_activity_errore_salvataggio">Level not saved</string>
    <string name="editor_activity_sovrascrizione">Override message</string>
    <string name="editor_activity_sovrascrizione_descrizione">Do you want to override previous level?</string>
    <string name="editor_activity_reset">Reset message</string>
    <string name="editor_activity_reset_descrizione">Do you want to reset this layer?</string>
    <string name="editor_activity_cancellazione">Delete message</string>
    <string name="editor_activity_cancellazione_descrizione">Do you want to delete this layer?</string>
    <string name="editor_activity_caricamento">Load message</string>
    <string name="editor_activity_caricamento_descrizione">Do you want to load this level?</string>

    <string name="info_fragment_nome_livello">Level name</string>
    <string name="info_fragment_nome_layer">Stage</string>
    <string name="info_fragment_selected_layer">Selected stage</string>
    <string name="info_fragment_selected_style">Selected style</string>
    <string name="info_fragment_livelli_creati">Created</string>

    <string name="mappa_fragment_altezza_mappa">Map height:</string>
    <string name="mappa_fragment_numero_righe">Row count:</string>
    <string name="mappa_fragment_numero_colonne">Column count:</string>
    <string name="mappa_fragment_vita_blocco">Brick health:</string>
    <string name="mappa_fragment_blocco_indistruttibile">I_Brick</string>

    <string name="parametri_fragment_velocita_palla">Ball speed</string>
    <string name="parametri_fragment_velocita_paddle">Paddle speed</string>
    <string name="parametri_fragment_punti_colpo">Hit point</string>
    <string name="parametri_fragment_punti_partita">Level point</string>

    <string name="test_fragment_riavvia">Reload</string>

    <string name="crediti_activity_intro">App created by:</string>

    <string name="impostazioni_fragment_volume_musica">Music volume</string>
    <string name="impostazioni_fragment_volume_effetti">Effects volume</string>

    <string name="creazioni_activity_creazioni">Creations</string>
    <string name="creazioni_cativity_mie_creazioni">My creations</string>

    <string name="pausa_generica_fragment_pausa_primo_pulsante">Continue</string>
    <string name="pausa_generica_fragment_pausa_secondo_pulsante">Menu</string>
    <string name="pausa_generica_fragment_gameover_primo_pulsante">Play again</string>
    <string name="pausa_generica_fragment_gameover_secondo_pulsante">Menu</string>

    <string name="multiplayer_activity_matchmaking_messaggio">Match making</string>
</resources>
