<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_background"
    tools:context=".modalita_activity">

    <TextView
        android:id="@+id/nomeModalitaLabel"
        style="@style/labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome modalita"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/difficoltaLabel"
        style="@style/labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/modalita_activity_seleziona_difficolta"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeModalitaLabel"
        app:layout_constraintVertical_bias="0.00999999" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficoltaLabel"
        app:layout_constraintVertical_bias="0.03">

        <ToggleButton
            android:id="@+id/difficoltaFacileButton"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/pulsante_con_stato"
            android:textOff="@string/modalita_activity_seleziona_difficolta_semplice"
            android:textOn="@string/modalita_activity_seleziona_difficolta_semplice"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/difficoltaNormaleButton"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/difficoltaNormaleButton"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pulsante_con_stato"
            android:textOff="@string/modalita_activity_seleziona_difficolta_normale"
            android:textOn="@string/modalita_activity_seleziona_difficolta_normale"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/difficoltaDifficileButton"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="@+id/difficoltaFacileButton"
            app:layout_constraintTop_toBottomOf="@+id/difficoltaLabel"
            app:layout_constraintVertical_bias="0.05" />

        <ToggleButton
            android:id="@+id/difficoltaDifficileButton"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/pulsante_con_stato"
            android:textOff="@string/modalita_activity_seleziona_difficolta_difficile"
            android:textOn="@string/modalita_activity_seleziona_difficolta_difficile"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/difficoltaNormaleButton"
            app:layout_constraintVertical_bias="0.0" />

    </TableRow>


    <TextView
        android:id="@+id/StileLabel"
        style="@style/labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/modalita_activity_seleziona_controllo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow1"
        app:layout_constraintVertical_bias="0.1" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StileLabel"
        app:layout_constraintVertical_bias="0.03">

        <ToggleButton
            android:id="@+id/touchButton"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/pulsante_con_stato"
            android:textOff="@string/modalita_activity_seleziona_controllo_touch"
            android:textOn="@string/modalita_activity_seleziona_controllo_touch"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/difficoltaNormaleButton"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/gyroButton"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/pulsante_con_stato"
            android:textOff="@string/modalita_activity_seleziona_controllo_gyro"
            android:textOn="@string/modalita_activity_seleziona_controllo_gyro"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/difficoltaDifficileButton"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="@+id/difficoltaFacileButton"
            app:layout_constraintTop_toBottomOf="@+id/difficoltaLabel"
            app:layout_constraintVertical_bias="0.05" />

    </TableRow>

    <Button
        android:id="@+id/startButton"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:layout_constraintVertical_bias="0.8" />

    <FrameLayout
        android:id="@+id/containerModalita"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="100dp"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>