<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMenu.game_over_fragment"
    android:background="@drawable/round_background">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/gameOverImage"
            android:layout_width="341dp"
            android:layout_height="57dp"
            android:src="@drawable/game_over_scritta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/riepilogoPunti"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="RiepilogoPunit"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameOverImage"
            app:layout_constraintVertical_bias="0.0500000" />

        <Button
            android:id="@+id/nuovaPartitaButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/fragment_game_over_nuova_partita"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riepilogoPunti"
            app:layout_constraintVertical_bias="0.03"
            tools:layout_editor_absoluteX="161dp" />

        <Button
            android:id="@+id/pubblicaRisultatiButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/fragment_game_over_pubblica_risultato"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nuovaPartitaButton"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/menuPrincipaleButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/fragment_game_over_torna_menu"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pubblicaRisultatiButton"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>